<resources>
    <string name="app_name">Nutri Score</string>
    <string name="zuckermenge_eingeben">Zucker eingeben</string>
    <string name="klick_mich">Werteeingabe</string>
    <string name="auswerten">auswerten</string>
    <string name="dein_nutri_score">Dein Nutri-Score: </string>
    <string name="fettgehalt_eingeben">Fettgehalt eingeben</string>
    <string name="eiwei_e_eingeben">Eiweiße eingeben</string>
    <string name="energie_eingeben">Energie eingeben</string>
    <string name="natriummenge_eingeben">Natrium eingeben</string>
    <string name="anteil_fr_chte_gem_se">Früchte/Gemüse/Nuss</string>
    <string name="ballaststoffe_eingeben">Ballaststoffe eingeben</string>
    <string name="barcode_eingeben">Barcode eingeben</string>
    <string name="barcode">Barcode:</string>
    <string name="energie">Energie:</string>
    <string name="zucker">Zucker:</string>
    <string name="fett">Fett:</string>
    <string name="natrium">Natrium:</string>
    <string name="frucht_nuss">Frucht/Nuss:</string>
    <string name="ballaststoffe">Ballaststoffe:</string>
    <string name="eiwei">Eiweiß:</string>
    <string name="barcodeTextView">Barcode</string>
    <string name="eingabebarcodebutton">Barcode eingeben</string>
    <string name="ergebnis">Ergebnis</string>
    <string name="nutri_score">Nutri Score</string>
    <string name="scannen">Scannen</string>
    <string name="inhaltsstoffe">Inhaltsstoffe</string>
    <string name="ergebnis2">Ergebnis</string>
    <string name="information">Information</string>
</resources>